# MacroBardo

./: CMakeLists.txt  MacroBardo.uf2  main.c  pio_rotary_encoder.pio  tusb_config.h  usb_descriptors.c  usb_descriptors.h
WaveshareLib/Config/: DEV_Config.c
WaveshareLib/e-Paper/: ImageData.c  ImageData.h
dev_hid_composite/: CMakeLists.txt
